Rimozioni di inizializzazioni ridondanti